# JWT_Security_Scanner

./: .gitignore  CHANGELOG.md  COMMERCIAL_LICENSE  GITHUB_SETUP.md  LICENSE  LICENSE_HEADER_TEMPLATE.txt  README.md  RELEASE-v2.0.0-india-pride.md  SECURITY_COMPLIANCE.md  SECURITY_NOTICE.md  analyze_token.py  apply_license_headers.py  basic_hs256_security_report.html  build_release.sh  common-headers.txt  common-payloads.txt  comprehensive_jwt_security_report.html  cve_enhanced_none_algorithm_report.html  enhanced_detailed_portswigger_report.html  enhanced_duplicate_hs256_report.html  enhanced_malicious_jku_report.html  enhanced_none_algorithm_report.html  enhanced_path_traversal_kid_report.html  india_branded_duplicate_hs256_report.html  india_branded_malicious_jku_report.html  india_branded_none_algorithm_report.html  india_branded_path_traversal_report.html  jwks-common.txt  jwt-common.txt  jwt_core.py  jwt_security_analyzer.py  jwt_security_report.html  jwt_tool.py  jwt_tool_standalone.py  malicious_jku_security_report.html  none_algorithm_security_report.html  path_traversal_kid_security_report.html  portswigger_carlos_sample_report.html  pyproject.toml  requirements.txt  (+3 more)
.github/workflows/: release.yml
