[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jwt-tool-enhanced"
version = "2.0.0"
description = "Advanced JWT security testing toolkit (educational & commercial dual-licensed)"
readme = "README.md"
authors = [
  { name = "Your Name", email = "lnaphade@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["jwt", "security", "pentest", "token", "cryptography"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Topic :: Security",
    "License :: Other/Proprietary License",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Development Status :: 5 - Production/Stable"
]
dependencies = [
  "PyQt5>=5.15.0",
  "pycryptodomex>=3.18.0",
  "requests>=2.28.0",
  "certifi>=2022.12.7",
  "termcolor>=2.4.0",
  "ratelimit>=2.2.1"
]

[project.urls]
Homepage = "https://github.com/lnaphade/jwt_tool"
Documentation = "https://github.com/lnaphade/jwt_tool/wiki"
Source = "https://github.com/lnaphade/jwt_tool"
Issues = "https://github.com/lnaphade/jwt_tool/issues"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["jwt_tool*"]
exclude = ["tests*", "build*", "dist*", "release*"]
